# otus_homework_tests

./: CMakeLists.txt  list.cpp  list.hpp  list.inl  main.cpp  serial.hpp  serial.inl
tests/: CMakeLists.txt  list_tests.cpp  serial_tests.cpp
